[project]
name = "dbos-kdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "dbos>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "types-aiobotocore-emr-serverless>=3.2.1",
]
